--- a/src/main/java/com/mcd/dub/views/panels/ConnectionSettingsPanel.form
+++ b/src/main/java/com/mcd/dub/views/panels/ConnectionSettingsPanel.form
@@ -29,7 +29,7 @@
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="ee38e" class="javax.swing.JLabel">
+                  <component id="ee38e" class="javax.swing.JLabel" binding="hostLabel" custom-create="true">
                     <constraints>
                       <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
                     </constraints>
